--- a/public/locales/en.json
+++ b/public/locales/en.json
@@ -1,6 +1,7 @@
 {
     "language": "default",
     "texts": {
+        "5": "5",
         "Sales report": "Sales report",
         "Top products": "Top products",
         "Customers": "Customers",
@@ -9,6 +10,7 @@
         "Orders": "Orders",
         "Settings": "Settings",
         "Analytics": "Analytics",
+        "QR number": "QR number",
         "New order": "New order",
         "All": "All",
         "New": "New",
@@ -19,7 +21,6 @@
         "Failed": "Failed",
         "Refunded": "Refunded",
         "Search order": "Search order",
-        "QR number": "QR number",
         "From": "From",
         "Status": "Status",
         "Subtotal": "Subtotal",
@@ -179,6 +180,14 @@
         "Bank branch city": "Bank branch city",
         "Bank branch country": "Bank branch country",
         "Bank account holder's name": "Bank account holder's name",
+        "required": "required",
+        "Size": "Size",
+        "Small": "Small",
+        "Regular": "Regular",
+        "Large": "Large",
+        "Discount by %": "Discount by %",
+        "Discount by value": "Discount by value",
+        "Grand Total": "Grand Total",
         "no records to display": "no records to display",
         "Unpublished": "Unpublished",
         "Drafts": "Drafts",
@@ -197,7 +206,6 @@
         "moments ago": "moments ago",
         "minutes ago": "minutes ago",
         "hours ago": "hours ago",
-        "required": "required",
         "Showing %1$ to %2$ of %3$ entries": "Showing %1$ to %2$ of %3$ entries",
         "Create": "Create",
         "Update": "Update",
@@ -211,9 +219,6 @@
         "Adjust price": "Adjust price",
         "Remove": "Remove",
         "Note": "Note",
-        "Discount by value": "Discount by value",
-        "Discount by %": "Discount by %",
-        "Grand Total": "Grand Total",
         "Incorrect product data": "Incorrect product data",
         "ID": "ID",
         "Table": "Table",
@@ -252,9 +257,9 @@
         "Product placeholder": "Product placeholder",
         "Edit product": "Edit product",
         "Completely remove this order?": "Completely remove this order?",
-        "Loading..": "Loading..",
         "Order created": "Order created",
         "Order updated": "Order updated",
+        "Loading..": "Loading..",
         "No orders to display.": "No orders to display.",
         "Product List": "Product List",
         "Product Edit": "Product Edit",
@@ -300,6 +305,7 @@
         "To": "To",
         "17:00": "17:00",
         "Time range when discount is available.": "Time range when discount is available.",
+        "": "",
         "Example: •happy hour promo.": "Example: •happy hour promo.",
         "+ add option": "+ add option",
         "to differentiate price offering.": "to differentiate price offering.",
