--- a/public/locales/zh.json
+++ b/public/locales/zh.json
@@ -1,6 +1,7 @@
 {
   "language": "默认",
   "texts": {
+    "5": "5",
     "Sales report": "销售报告",
     "Top products": "顶级产品",
     "Customers": "顾客",
@@ -9,6 +10,7 @@
     "Orders": "订单",
     "Settings": "设置",
     "Analytics": "分析",
+    "QR number": "二维码",
     "New order": "新订单",
     "All": "全部",
     "New": "新的",
@@ -19,7 +21,6 @@
     "Failed": "失败",
     "Refunded": "已退款",
     "Search order": "搜索顺序",
-    "QR number": "二维码",
     "From": "从",
     "Status": "状态",
     "Subtotal": "小计",
@@ -179,6 +180,14 @@
     "Bank branch city": "银行分行城市",
     "Bank branch country": "银行分行国家",
     "Bank account holder's name": "银行账户持有人\\",
+    "required": "必需的",
+    "Size": "大小",
+    "Small": "小",
+    "Regular": "中",
+    "Large": "大",
+    "Discount by %": "折扣百分比",
+    "Discount by value": "按价值打折",
+    "Grand Total": "累计",
     "no records to display": "无记录可显示",
     "Unpublished": "未发表",
     "Drafts": "草稿",
@@ -197,7 +206,6 @@
     "moments ago": "片刻前",
     "minutes ago": "几分钟前",
     "hours ago": "几小时前",
-    "required": "必需的",
     "Showing %1$ to %2$ of %3$ entries": "显示 %1$ 到 %2$ 个条目，共 %3$ 个条目",
     "Create": "创造",
     "Update": "更新",
@@ -211,9 +219,6 @@
     "Adjust price": "调整价格",
     "Remove": "删除",
     "Note": "笔记",
-    "Discount by value": "按价值打折",
-    "Discount by %": "折扣百分比",
-    "Grand Total": "累计",
     "Incorrect product data": "产品数据不正确",
     "ID": "ID",
     "Table": "桌子",
@@ -252,9 +257,9 @@
     "Product placeholder": "产品占位框",
     "Edit product": "编辑产品",
     "Completely remove this order?": "完全删除此订单？",
-    "Loading..": "加载中..",
     "Order created": "已创建订单",
     "Order updated": "订单已更新",
+    "Loading..": "加载中..",
     "No orders to display.": "没有可显示的订单。",
     "Product List": "产品列表",
     "Product Edit": "产品编辑",
@@ -300,6 +305,7 @@
     "To": "至",
     "17:00": "17:00",
     "Time range when discount is available.": "可享受折扣的时间范围。",
+    "": "",
     "Example: •happy hour promo.": "示例： •欢乐时光促销。",
     "+ add option": "+ 添加选项",
     "to differentiate price offering.": "以区分价格提供。",
