--- a/src/locales/es.json
+++ b/src/locales/es.json
@@ -1,6 +1,7 @@
 {
   "language": "defecto",
   "texts": {
+    "5": "5",
     "Sales report": "Reporte de ventas",
     "Top products": "Los mejores productos",
     "Customers": "Clientes",
@@ -9,6 +10,7 @@
     "Orders": "Pedidos",
     "Settings": "Ajustes",
     "Analytics": "Analítica",
+    "QR number": "Número QR",
     "New order": "Nuevo orden",
     "All": "Todos",
     "New": "Nuevo",
@@ -19,7 +21,6 @@
     "Failed": "Ha fallado",
     "Refunded": "Reintegrado",
     "Search order": "Orden de búsqueda",
-    "QR number": "Número QR",
     "From": "Desde",
     "Status": "Estado",
     "Subtotal": "Total parcial",
@@ -179,6 +180,14 @@
     "Bank branch city": "Ciudad sucursal bancaria",
     "Bank branch country": "País de la sucursal bancaria",
     "Bank account holder's name": "Nombre del propietario de la cuenta bancaria",
+    "required": "requerido",
+    "Size": "Tamaño",
+    "Small": "Pequeña",
+    "Regular": "Regular",
+    "Large": "Largo",
+    "Discount by %": "Descuento por %",
+    "Discount by value": "Descuento por valor",
+    "Grand Total": "Gran total",
     "no records to display": "No hay registros que mostrar",
     "Unpublished": "Inédito",
     "Drafts": "Borradores",
@@ -197,7 +206,6 @@
     "moments ago": "Momentos atrás",
     "minutes ago": "hace minutos",
     "hours ago": "horas atras",
-    "required": "requerido",
     "Showing %1$ to %2$ of %3$ entries": "Mostrando %1$ a %2$ de %3$ entradas",
     "Create": "Crear",
     "Update": "Actualizar",
@@ -211,9 +219,6 @@
     "Adjust price": "Precio ajustado",
     "Remove": "Remover",
     "Note": "Nota",
-    "Discount by value": "Descuento por valor",
-    "Discount by %": "Descuento por %",
-    "Grand Total": "Gran total",
     "Incorrect product data": "Datos de producto incorrectos",
     "ID": "IDENTIFICACIÓN",
     "Table": "Mesa",
@@ -252,9 +257,9 @@
     "Product placeholder": "Producto marcador de posición",
     "Edit product": "Editar producto",
     "Completely remove this order?": "¿Eliminar completamente este pedido?",
-    "Loading..": "Cargando..",
     "Order created": "Pedido creado",
     "Order updated": "Pedido actualizado",
+    "Loading..": "Cargando..",
     "No orders to display.": "No hay pedidos para mostrar.",
     "Product List": "Lista de productos",
     "Product Edit": "Producto Editar",
@@ -300,6 +305,7 @@
     "To": "A",
     "17:00": "17:00",
     "Time range when discount is available.": "Rango de tiempo cuando el descuento está disponible.",
+    "": "",
     "Example: •happy hour promo.": "Ejemplo: • promoción de hora feliz.",
     "+ add option": "+ añadir opción",
     "to differentiate price offering.": "para diferenciar la oferta de precios.",
