--- a/src/locales/id.json
+++ b/src/locales/id.json
@@ -1,6 +1,7 @@
 {
   "language": "bawaan",
   "texts": {
+    "5": "5",
     "Sales report": "Laporan penjualan",
     "Top products": "Produk teratas",
     "Customers": "pelanggan",
@@ -9,6 +10,7 @@
     "Orders": "Pesanan",
     "Settings": "Pengaturan",
     "Analytics": "Analitik",
+    "QR number": "nomor QR",
     "New order": "Pesanan baru",
     "All": "Semua",
     "New": "Baru",
@@ -19,7 +21,6 @@
     "Failed": "Gagal",
     "Refunded": "Dikembalikan",
     "Search order": "Cari pesanan",
-    "QR number": "nomor QR",
     "From": "Dari",
     "Status": "Status",
     "Subtotal": "Subtotal",
@@ -179,6 +180,14 @@
     "Bank branch city": "kota cabang bank",
     "Bank branch country": "negara cabang bank",
     "Bank account holder's name": "Nama pemegang rekening bank",
+    "required": "diperlukan",
+    "Size": "Ukuran",
+    "Small": "Kecil",
+    "Regular": "Reguler",
+    "Large": "Besar",
+    "Discount by %": "Diskon sebesar %",
+    "Discount by value": "Diskon berdasarkan nilai",
+    "Grand Total": "Hasil akhir",
     "no records to display": "Tidak ada catatan untuk ditampilkan",
     "Unpublished": "Tidak diterbitkan",
     "Drafts": "draf",
@@ -197,7 +206,6 @@
     "moments ago": "beberapa waktu lalu",
     "minutes ago": "beberapa menit yang lalu",
     "hours ago": "beberapa jam yang lalu",
-    "required": "diperlukan",
     "Showing %1$ to %2$ of %3$ entries": "Menampilkan %1$ hingga %2$ dari %3$ entri",
     "Create": "Membuat",
     "Update": "Memperbarui",
@@ -211,9 +219,6 @@
     "Adjust price": "Sesuaikan harga",
     "Remove": "Menghapus",
     "Note": "Catatan",
-    "Discount by value": "Diskon berdasarkan nilai",
-    "Discount by %": "Diskon sebesar %",
-    "Grand Total": "Hasil akhir",
     "Incorrect product data": "Data produk salah",
     "ID": "PENGENAL",
     "Table": "Meja",
@@ -252,9 +257,9 @@
     "Product placeholder": "Tempat penampung produk",
     "Edit product": "Sunting produk",
     "Completely remove this order?": "Hapus pesanan ini sepenuhnya?",
-    "Loading..": "Memuat..",
     "Order created": "Pesanan dibuat",
     "Order updated": "Pesanan diperbarui",
+    "Loading..": "Memuat..",
     "No orders to display.": "Tidak ada perintah untuk ditampilkan.",
     "Product List": "Daftar Produk",
     "Product Edit": "Pengeditan Produk",
@@ -300,6 +305,7 @@
     "To": "Ke",
     "17:00": "17:00",
     "Time range when discount is available.": "Rentang waktu saat diskon tersedia.",
+    "": "",
     "Example: •happy hour promo.": "Contoh: •promo happy hour.",
     "+ add option": "+ tambahkan opsi",
     "to differentiate price offering.": "untuk membedakan penawaran harga.",
