--- a/src/locales/lv.json
+++ b/src/locales/lv.json
@@ -1,6 +1,7 @@
 {
   "language": "noklusējuma",
   "texts": {
+    "5": "5",
     "Sales report": "Pārdošanas atskaite",
     "Top products": "Top produkti",
     "Customers": "Klienti",
@@ -9,6 +10,7 @@
     "Orders": "Pasūtījumi",
     "Settings": "Iestatījumi",
     "Analytics": "Analytics",
+    "QR number": "QR numurs",
     "New order": "Jauns pasūtījums",
     "All": "Visi",
     "New": "Jauns",
@@ -19,7 +21,6 @@
     "Failed": "Neizdevās",
     "Refunded": "Atmaksāts",
     "Search order": "Meklēšanas secība",
-    "QR number": "QR numurs",
     "From": "No",
     "Status": "Statuss",
     "Subtotal": "Starpsumma",
@@ -179,6 +180,14 @@
     "Bank branch city": "Bankas filiāles pilsēta",
     "Bank branch country": "Bankas filiāles valsts",
     "Bank account holder's name": "Bankas konta turētāja vārds",
+    "required": "nepieciešams",
+    "Size": "Izmērs",
+    "Small": "Mazs",
+    "Regular": "Regulāri",
+    "Large": "Liels",
+    "Discount by %": "Atlaide par %",
+    "Discount by value": "Atlaide pēc vērtības",
+    "Grand Total": "Kopsumma",
     "no records to display": "pagaidam nav ierakstu",
     "Unpublished": "Nepublicēts",
     "Drafts": "Melnraksti",
@@ -197,7 +206,6 @@
     "moments ago": "pirms mirkļiem",
     "minutes ago": "pirms minūtēm",
     "hours ago": "pirms vairākām stundām",
-    "required": "nepieciešams",
     "Showing %1$ to %2$ of %3$ entries": "Tiek rādīts %1$ līdz %2$ no %3$ ierakstiem",
     "Create": "Izveidot",
     "Update": "Atjaunināt",
@@ -211,9 +219,6 @@
     "Adjust price": "Pielāgojiet cenu",
     "Remove": "Noņemt",
     "Note": "Piezīme",
-    "Discount by value": "Atlaide pēc vērtības",
-    "Discount by %": "Atlaide par %",
-    "Grand Total": "Kopsumma",
     "Incorrect product data": "Nepareizi produkta dati",
     "ID": "ID",
     "Table": "Tabula",
@@ -252,9 +257,9 @@
     "Product placeholder": "Produkta vietturis",
     "Edit product": "Rediģēt produktu",
     "Completely remove this order?": "Vai pilnībā noņemt šo pasūtījumu?",
-    "Loading..": "Notiek ielāde...",
     "Order created": "Pasūtījums izveidots",
     "Order updated": "Pasūtījums atjaunināts",
+    "Loading..": "Notiek ielāde...",
     "No orders to display.": "Nav pasūtījumu, ko parādīt.",
     "Product List": "Produktu saraksts",
     "Product Edit": "Produkta rediģēšana",
@@ -300,6 +305,7 @@
     "To": "Uz",
     "17:00": "17:00",
     "Time range when discount is available.": "Laika diapazons, kad ir pieejama atlaide.",
+    "": "",
     "Example: •happy hour promo.": "Piemērs: •laimīgās stundas akcija.",
     "+ add option": "+ pievienošanas opcija",
     "to differentiate price offering.": "lai diferencētu cenu piedāvājumu.",
